--- a/web/index.html
+++ b/web/index.html
@@ -34,8 +34,8 @@
             <li><a href="#">Options</a></li>
             <li><a href="#">Key mapping</a></li>
             <li><a href="#" id="debButtonToggle">Debugger
-              <span id="debStatusOn" class="label label-success">On</span>
-              <span  id="debStatusOff" class="label label-danger" style="display: none;">Off</span>
+              <span id="debStatusOn" class="label label-success" style="display: none;">On</span>
+              <span  id="debStatusOff" class="label label-danger">Off</span>
             </a></li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
     <div id="container-main" class="container-fluid">
 
       <!-- OPTION -->
-      <div class="row closable" id="row-option">
+      <div class="row closable" style="display: none;" id="row-option">
         <div class="col-xs-12">
           <div id="mainSpeedText" class="slider-text">0.00x</div>
           <div id="speed-slider-cont" class="slider-cont">
@@ -81,6 +81,12 @@
       </div>
       <!-- /OPTION -->
 
+      <!-- KEY_MAPPING -->
+      <div class="row closable" style="display: none;" id="row-key-mapping">
+        key mapping!
+      </div>
+      <!-- /KEY_MAPPING -->
+
       <!-- ALERT -->
       <div class="row" id="row-alert">
         <div class="col-sm-offset-2 col-sm-8" id="mainAlertBox"></div>
@@ -96,7 +102,7 @@
       <!-- /CANVAS -->
 
       <!-- CART SYSTEM -->
-      <div class="closable" id="row-cartsystem">
+      <div class="closable" style="display: none;" id="row-cartsystem">
         <div class="col">
           <div id="gb-slot" class="ui-widget-header toplevel-bank">
             <div id="label-gbsocket-empty" style="display: none;">Drop a cartridge here !</div>
@@ -127,7 +133,7 @@
       <!-- /CART SYSTEM -->
 
       <!-- DEBUGGER -->
-      <div class="row closable" id="row-debugger">
+      <div class="row closable" style="display: none;" id="row-debugger">
 
         <div class="col-sm-12" id="debColButtons"></div>
         <div class="col-sm-12" id="debColClock"></div>
