--- a/web/index.html
+++ b/web/index.html
@@ -48,32 +48,32 @@
 
       <!-- OPTION -->
       <div class="row closable" style="display: none;" id="row-option">
-        <div class="col-xs-12">
-          <div id="mainSpeedText" class="slider-text">0.00x</div>
+        <div class="col-sm-12">
+          <div id="mainSpeedText" class="slider-text">Speed 0.00x</div>
           <div id="speed-slider-cont" class="slider-cont">
             <div id="mainSpeedSlider"></div>
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="slider-text canvas-scale-part">2.00x</div>
+        <div class="col-sm-6 ft-left">
+          <div class="slider-text canvas-scale-part">Scale</div>
           <div class="slider-cont canvas-scale-part">
             <div class="slider"></div>
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="slider-text canvas-smooth-part">Off</div>
+          <div class="slider-text canvas-smooth-part">Anti-aliasing</div>
           <div class="slider-cont canvas-smooth-part">
             <div class="slider"></div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 ft-left">
           <div class="slider-text gameboy-mode-part">Game Boy</div>
           <div class="slider-cont gameboy-mode-part">
             <div class="slider"></div>
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="slider-text gameboy-fps-part">Off</div>
+          <div class="slider-text gameboy-fps-part">Refresh rate</div>
           <div class="slider-cont gameboy-fps-part">
             <div class="slider"></div>
           </div>
